[tool.poetry]
name = "api-listecourses"
version = "0.1.0"
description = ""
authors = ["Gwhite <guilhem.dolet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
